--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  | Hey, check out
+  a(href="http://localhost:3000/http-request-printer")  this page
