--- a/views/index.pug
+++ b/views/index.pug
@@ -4,4 +4,4 @@ block content
   h1= title
   p Welcome to #{title}
   | Hey, check out
-  a(href="http://localhost:3000/http-request-printer")  this page
+  a(href="/http-request-printer")  this page
