fix headers and query display

--- a/views/http-request-printer.pug
+++ b/views/http-request-printer.pug
@@ -6,8 +6,8 @@ block content
     p URL: #{url}
     p Version: #{httpVersion}
     p Headers:
-        each val, index in {accept: headers.accept,acceptEncoding: headers.accept-encoding,acceptLanguage: headers.accept-language,cacheControl: headers.cache-control,connection:headers.connection,host:headers.host,ifNoneMatch:headers.if-none-match,upgradeInsecureRequests:headers.upgrade-insecure-requests,userAgent:headers.user-agent}
+        each val, index in headers
             li= index + ': ' + val
     p Query:
-        each val, index in {query: query.id}
+        each val, index in httpQuery
             li= index + ': ' + val
