--- a/views/index.pug
+++ b/views/index.pug
@@ -5,3 +5,6 @@ block content
   p Welcome to #{title}
   | Hey, check out
   a(href="/http-request-printer")  this page
+  br
+  | Text area
+  a(href="/text-form")  here
