--- a/views/text-form.pug
+++ b/views/text-form.pug
@@ -3,12 +3,14 @@ extends layout
 
 
 block content
+
+
     h2 Text Area
-    p This form will be submitted using the GET method:
-    form(action='/text-form' target='_self' method='GET')
+    p This form will be submitted using the POST method:
+    form(action='/text-form' target='_self'  method='POST')
         | Enter your text:
         br
-        textarea(name='message' rows='10' cols='30')
+        textarea(name='message' rows='10' cols='30')=userText
         br
         br
         input(type='submit' value='Submit')
