--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/css/materialize.css')
+    link(rel='stylesheet', href='/css/style.css')
+    script(src = '/js/materialize.js')
   body
     block content
