--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,4 +6,47 @@ html
     link(rel='stylesheet', href='/css/style.css')
     script(src = '/js/materialize.js')
   body
-    block content
+
+     header
+         nav.blue-grey.lighten-2
+           .nav-wrapper
+             a.brand-logo(href='#') Logo
+             ul#nav-mobile.right.hide-on-med-and-down
+               li
+                 a(href='sass.html') Sass
+               li
+                 a(href='badges.html') Components
+               li
+                 a(href='collapsible.html') JavaScript
+
+
+     main
+        block content
+
+     footer.page-footer.blue-grey.darken-3
+       .container
+         .row
+           .col.l6.s12
+             h5.white-text Footer Content
+             p.grey-text.text-lighten-4 You can use rows and columns here to organize your footer content.
+           .col.l4.offset-l2.s12
+             h5.white-text Links
+             ul
+               li
+                 a.grey-text.text-lighten-3(href='#!') Link 1
+               li
+                 a.grey-text.text-lighten-3(href='#!') Link 2
+               li
+                 a.grey-text.text-lighten-3(href='#!') Link 3
+               li
+                 a.grey-text.text-lighten-3(href='#!') Link 4
+       .footer-copyright
+         .container
+           | &copy; 2018 Copyright Text
+           a.grey-text.text-lighten-4.right(href='#!') More Links
+
+
+
+
+
+
