edit text parser and logo

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Welcome to #{title}
   .row
     .col.s12.m7
       .card.hoverable
@@ -19,7 +18,7 @@ block content
   | Hey, check out
   a(href="/http-request-printer")  this page
   br
-  | Text area
+  | Text Parser
   a(href="/text-form")  here
   br
   | Test java server
