--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html
      header
          nav.blue-grey.lighten-2
            .nav-wrapper
-             a.brand-logo(href='#') Logo
+             a.brand-logo(href='/') NinaGeek
              ul#nav-mobile.right.hide-on-med-and-down
                li
                  a(href='sass.html') Sass
