--- a/views/text-form.pug
+++ b/views/text-form.pug
@@ -5,12 +5,11 @@ extends layout
 block content
 
 
-    h2 Text Area
-    p This form will be submitted using the POST method:
+    h2 Text Parser
     form(action='/text-form' target='_self'  method='POST')
-        | Enter your text:
+        | Enter your text and after clicking the submit button you will find out how many symbols, words and sentences are in your text:
         br
-        textarea(name='message' rows='10' cols='30')=userText
+        textarea.textarea1.materialize-textarea(name='message' rows='10' cols='30')=userText
         br
         br
         input(type='submit' value='Submit')
