--- a/views/text-form.pug
+++ b/views/text-form.pug
@@ -12,7 +12,7 @@ block content
         textarea.textarea1.materialize-textarea(name='message' rows='10' cols='30')=userText
         br
         br
-        input(type='submit' value='Submit')
+        input.btn.blue-grey.darken-1b.waves-effect.waves-blue-grey.darken-1b(type='submit' value='Submit')
 
     if wordTokens
         if wordTokens.length > 1
