--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
   body
 
      header
-         nav.blue-grey.lighten-2
+         nav.blue-grey.darken-1b
            .nav-wrapper
              a.brand-logo(href='/') NinaGeek
              ul#nav-mobile.right.hide-on-med-and-down
