--- a/views/index.pug
+++ b/views/index.pug
@@ -1,61 +1,52 @@
 extends layout
 
 block content
-  h1 Welcome to #{title}
-  .row
-    .col.s6
-      .card.hoverable
-        .card-image
-          img(src='images/Fuji.jpg')
-          span.card-title Fuji
-        .card-content
-          p
-            | My name is Nina.
-            | I'm learning how to code.
-        .card-action
-          a(href='#') This is a link
-      // Grey navigation panel
-
-    .col.s6
-      .card.hoverable.blue-grey.darken-1b
-        .card-content.white-text
-          span.card-title Some of my projects
-          p
-            | I am a very simple card. I am good at containing small bits of information.
-            | I am convenient because I require little markup to use effectively.
-        .card-action
-          a(href='#') This is a link
-          a(href='#') This is a link
-      .card.hoverable.blue-grey.darken-1
-        .card-content.white-text
-          span.card-title My GitHub
-          p
-            | I am a very simple card. I am good at containing small bits of information.
-            | I am convenient because I require little markup to use effectively.
-        .card-action
-          a(href='https://github.com/Never2l8') This is a link
-
-      .card.hoverable.blue-grey.darken-1
-        .card-content.white-text
-          span.card-title Contact me
-          p
-            | I am a very simple card. I am good at containing small bits of information.
-            | I am convenient because I require little markup to use effectively.
-        .card-action
-          a(href='#') This is a link
-          a(href='#') This is a link
+    h1 Welcome to #{title}
+    .row
+        .col.s6
+            .card.hoverable
+                .card-image
+                    img(src='images/Fuji.jpg')
+                    span.card-title Fuji
+                .card-content
+                    p
+                        | My name is Nina.
+                        | I'm learning how to code.
 
 
+            // Grey navigation panel
 
-      | Hey, check out
-      a(href="/http-request-printer")  this page
-      br
-      | Text Parser
-      a(href="/text-form")  here
-      br
-      | Test java server
-      a(href="/test-jserver")  here
-      // Teal page content
+        .col.s6
+            .card.hoverable.blue-grey.darken-1b
+                .card-content.white-text
+                    span.card-title Some of my projects
+                    p
+                        | I am a very simple card. I am good at containing small bits of information.
+                        | I am convenient because I require little markup to use effectively.
+                .card-action
+                    a(href='/my-projects') This is a link
+
+            .card.hoverable.blue-grey.darken-1
+                .card-content.white-text
+                    span.card-title My GitHub
+
+                .card-action
+                    a(href='https://github.com/ninageek') The new one
+                    a(href='https://github.com/Never2l8') The old one
+
+            .card.hoverable.blue-grey.darken-1
+                .card-content.white-text
+                    span.card-title Contact me
+                    p
+                        | I am a very simple card. I am good at containing small bits of information.
+                        | I am convenient because I require little markup to use effectively.
+                .card-action
+                    a(href='#') This is a link
+                    a(href='#') This is a link
+
+
+
+
 
 
 
