--- a/views/http-request-printer.pug
+++ b/views/http-request-printer.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h1= 'http request printer'
+    h1= 'HTTP request printer'
     p Method: #{method}
     p URL: #{url}
     p httpVersion: #{httpVersion}
