--- a/views/my-projects.pug
+++ b/views/my-projects.pug
@@ -7,10 +7,10 @@ block content
         .col.s6
             .card.hoverable.blue-grey.darken-1
                 .card-content.white-text
-                    span.card-title http request printer
+                    span.card-title HTTP request printer
                     p
-                        | I am a very simple card. I am good at containing small bits of information.
-                        | I am convenient because I require little markup to use effectively.
+                        | Description
+                        |
                 .card-action
                     a(href='/http-request-printer') This is a link
 
@@ -18,8 +18,8 @@ block content
                 .card-content.white-text
                     span.card-title Text Parser
                     p
-                        | I am a very simple card. I am good at containing small bits of information.
-                        | I am convenient because I require little markup to use effectively.
+                        | Description
+                        |
                 .card-action
                     a(href='/text-form') This is a link
 
@@ -27,8 +27,8 @@ block content
                 .card-content.white-text
                     span.card-title Test Java Server
                     p
-                        | I am a very simple card. I am good at containing small bits of information.
-                        | I am convenient because I require little markup to use effectively.
+                        | Description
+                        |
                 .card-action
                     a(href='/test-jserver') This is a link
 
