make a card for text-area form/rename links in cards

--- a/views/index.pug
+++ b/views/index.pug
@@ -17,12 +17,11 @@ block content
             // Grey navigation panel
 
         .col.s6
-            .card.hoverable.blue-grey.darken-1b
+            .card.hoverable.blue-grey.darken-1
                 .card-content.white-text
-                    span.card-title Some of my projects
-
+                    span.card-title My projects
                 .card-action
-                    a(href='/my-projects') This is a link
+                    a(href='/my-projects') my projects
 
             .card.hoverable.blue-grey.darken-1
                 .card-content.white-text
@@ -35,12 +34,11 @@ block content
             .card.hoverable.blue-grey.darken-1
                 .card-content.white-text
                     span.card-title Contact me
-                    p
-                        |
 
                 .card-action
-                    a(href='#') This is a link
-                    a(href='#') This is a link
+                    a(href='https:/t.me/NinaGeek') Telegram
+                    a(href='#') E-mail
+
 
 
 
