--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html
      header
          nav.blue-grey.darken-1b
            .nav-wrapper
-             a.brand-logo(href='/') NinaGeek
+             a.brand-logo.my-logo(href='/') NinaGeek
 
 
 
