--- a/views/my-projects.pug
+++ b/views/my-projects.pug
@@ -12,16 +12,16 @@ block content
                         | Description
                         |
                 .card-action
-                    a(href='/http-request-printer') This is a link
+                    a(href='/http-request-printer') Click here to try
 
             .card.hoverable.blue-grey.darken-1
                 .card-content.white-text
                     span.card-title Text Parser
                     p
-                        | Description
+                        | A simple text parser that counts the number of symbols, words, and sentences in the text.
                         |
                 .card-action
-                    a(href='/text-form') This is a link
+                    a(href='/text-form') Click here to try
 
             .card.hoverable.blue-grey.darken-1
                 .card-content.white-text
@@ -30,5 +30,5 @@ block content
                         | Description
                         |
                 .card-action
-                    a(href='/test-jserver') This is a link
+                    a(href='/test-jserver') Click here to try
 
