--- a/views/test-jserver.pug
+++ b/views/test-jserver.pug
@@ -7,7 +7,7 @@ block content
 
 
     form(action='test-jserver' target='_self'  method='POST')
-      input(type='submit', value='Test java server!').btn.blue-grey.darken-1b.waves-effect.waves-blue-grey.darken-1b
+      input(type='submit', value='Test java server!').btn-large.blue-grey.darken-1b.waves-effect.waves-blue-grey.darken-1b
 
     if(responseString)
        p Server responded: #{responseString}
