--- a/views/text-form.pug
+++ b/views/text-form.pug
@@ -22,23 +22,24 @@ block content
                 .card-content.blue-grey-text
                     span.card-title Parsing result:
 
-                    if wordTokens
-                        if wordTokens.length > 1
-                           p There are #{wordTokens.length} words in this text
-                        else
-                           p There is #{wordTokens.length} word in this text
+
                     if userText
                         if userText.length > 1
                            p There are #{userText.length} symbols in this text
                         else
                            p There is #{userText.length} symbol in this text
                     if symbolTokens
-                        if symbolTokens > 1
+                        if symbolTokens.length > 1
                            p There are #{symbolTokens.length} visible symbols in this text
                         else
                            p There is #{symbolTokens.length} visible symbol in this text
+                    if wordTokens
+                        if wordTokens.length > 1
+                            p There are #{wordTokens.length} words in this text
+                        else
+                            p There is #{wordTokens.length} word in this text
                     if sentences
-                        if sentences.length > 1
+                        if sentences.length > 2
                            p There are #{sentences.length -1} sentences in this text
                         else if sentences.length <=1
                            p There is no submitted complite sentence
