--- a/views/text-form.pug
+++ b/views/text-form.pug
@@ -33,10 +33,10 @@ block content
                             else
                                 p There is #{visibleSymbols.length} visible symbol in this text
                         if wordTokens
-                            if wordTokens.length > 1
-                                p There are #{wordTokens.length} words in this text
+                            if wordTokens > 1
+                                p There are #{wordTokens} words in this text
                             else
-                                p There is #{wordTokens.length} word in this text
+                                p There is #{wordTokens} word in this text
                         if sentences
                             if sentences.length > 2
                                 p There are #{sentences.length - 1} sentences in this text
