NINAGEEK-13 add string check page NINAGEEK-14 add Euler's number page

--- a/views/my-projects.pug
+++ b/views/my-projects.pug
@@ -32,3 +32,20 @@ block content
                 .card-action
                     a(href='/test-jserver') Click here to try
 
+            .card.hoverable.blue-grey.darken-1
+                .card-content.white-text
+                    span.card-title String Checker
+                    p
+                        | Description
+                        |
+                .card-action
+                    a(href='/string-checker') Click here to try
+
+            .card.hoverable.blue-grey.darken-1
+                .card-content.white-text
+                    span.card-title Euler's Number
+                    p
+                        | Description
+                        |
+                .card-action
+                    a(href='/eulers-number') Click here to try
