--- a/views/test-jserver.pug
+++ b/views/test-jserver.pug
@@ -1,13 +1,13 @@
 extends layout
 
 block content
-    p
-    | Click the button!
+    .row
+        .col.s6.m6
+            .card.transparent.hoverable
+                .card-content.blue-grey-text
+                    span.card-title HTTP request printer
+                    form(action='test-jserver' target='_self'  method='POST')
+                      input(type='submit', value='Test java server!').btn-large.blue-grey.darken-1b.waves-effect.waves-blue-grey.darken-1b
 
-
-
-    form(action='test-jserver' target='_self'  method='POST')
-      input(type='submit', value='Test java server!').btn-large.blue-grey.darken-1b.waves-effect.waves-blue-grey.darken-1b
-
-    if(responseString)
-       p Server responded: #{responseString}
+                    if(responseString)
+                       p Server responded: #{responseString}
