NINAGEEK-14 complete Euler's number page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,16 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
 }
+
 a.my-logo {
-  padding-left: 25px;
+    padding-left: 25px;
+}
+
+.euler {
+    word-wrap: break-word;
 }
