NINAGEEK-16 Image rotation page

--- a/views/my-projects.pug
+++ b/views/my-projects.pug
@@ -32,6 +32,7 @@ block content
                 .card-action
                     a(href='/test-jserver') Click here to try
 
+        .col.s6
             .card.hoverable.blue-grey.darken-1
                 .card-content.white-text
                     span.card-title String Checker
@@ -49,3 +50,12 @@ block content
                         |
                 .card-action
                     a(href='/eulers-number') Click here to try
+
+            .card.hoverable.blue-grey.darken-1
+                .card-content.white-text
+                    span.card-title Image Rotation
+                    p
+                        | Description
+                        |
+                .card-action
+                    a(href='/image-rotation') Click here to try
