--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/css/materialize.css')
     link(rel='stylesheet', href='/css/style.css')
+    link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
     script(src = '/js/materialize.js')
         link(rel='apple-touch-icon' sizes='180x180' href='/apple-touch-icon.png')
         link(rel='icon' type='image/png' sizes='32x32' href='/favicon-32x32.png')
