--- a/views/my-projects.pug
+++ b/views/my-projects.pug
@@ -58,4 +58,4 @@ block content
                         | Description
                         |
                 .card-action
-                    a(href='/image-rotation') Click here to try
+                    a(href='/image-transformation') Click here to try
